1번 문제 풀이

--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,18 @@
+# 동시성(Concurrency)
 
+동시성은 DB에서 동시에 동일한 데이터에 접근하여 수정하려는 상태를 말합니다. 이러한 동시성에 대한 방어를 해두지 않으면 의도한대로 데이터의 값이 보존되지 않을 수 있습니다.
+
+예를들어 계좌에서 출금이 진행중인 경우일 때 Commit전에 해당 데이터에 입금이 진행되었다고 한다면 해당 데이터의 값은 틀린 값이 될 수 있습니다.
+
+# 방법
+
+해결방법은 다양한 방법이 있을 수 있으나 어떤 방법을 선택할 지는 주어진 환경에 따라 선택을 해야 한다고 생각합니다.
+
+결국 문제의 핵심은 동시에 데이터에 접근하기 때문에 발생하는 것이기 때문에 해당 데이터의 동시 접근을 어떻게 제어할 것인가를 생각해야 합니다.
+
+떠오르는 현실적인 방법을 말해보자면,
+
+- (비관적)데이터에 Lock 걸기
+- (낙관적)숫자 컬럼을 생성하여 해당 값으로 판단
+
+라고 할 수 있습니다.
