--- a/1번 문제.md
+++ b/1번 문제.md
@@ -12,7 +12,17 @@
 
 떠오르는 현실적인 방법을 말해보자면,
 
-- (비관적)데이터에 Lock 걸기
-- (낙관적)숫자 컬럼을 생성하여 해당 값으로 판단
+- (비관적) 데이터에 Lock 걸기
+- (낙관적) 숫자 컬럼을 생성하여 해당 값으로 판단
 
 라고 할 수 있습니다.
+
+## Lock
+현재 수정하고 있는 데이터가 다른 요청에 의해서 수정될 수 있는 가능성을 염두해서 **Lock**을 거는 방법입니다.
+
+데이터의 무결성을 보장하지만 요청을 처리하는 동안 **Lock**이 걸리기 때문에 다른 요청이 대기 상태가 됩니다. 그리고 요청은 트랜잭션의 **commit**이나 **rollback**이 실행된 후에 **Lock**이 풀리게 되고, 다음 요청이 실행됩니다.
+
+## 컬럼 추가
+같은 데이터를 동시에 수정하지 않을 것을 가정한 방법입니다. 따라서 **Lock**을 걸지 않습니다.
+
+테이블에 숫자 컬럼을 추가하여 해당 컬럼의 값을 통해서 변경되는 값을 검사합니다. 컬럼만 추가하면 되기 때문에 구현이 쉽다는 장점이 있습니다.
