--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,19 @@
+# TCP
+TCP(Transmission Control Protocol)는 연결 지향적 프로토콜입니다. 따라서 통신하기 위해선 클라이언트와 서버가 연결되어 있어야 합니다.
 
+TCP의 특징은 다음과 같습니다.
+- 3 way handshake 방식을 사용하여 연결
+- 전송 시 순서를 보장
+- 신뢰성 있는 데이터를 전송
+- 데이터 흐름 제어와 혼잡 제어 기능
+- UDP보다 속도가 느림
+
+
+# UDP
+UDP(User Datagram Protocol)는 비연결 지향 프로토콜입니다. UDP는 연결 과정 없이 데이터를 전송합니다. 연결과정 없이 데이터를 전송하기 때문에 패킷이 유실될 가능성이 있습니다.
+
+UDP의 특징은 다음과 같습니다.
+- 연결 절차를 진행하지 않음
+- 신뢰성 없는 데이터 전송
+- 패킷 관리 필요
+- TCP보다 속도가 빠름
