--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,9 @@
+### 웹 브라우저에 네이버 를 검색하고 화면에 네이버 화면이 출력이 될 때 까지 내부적으로 어떤 동작들이 수행이 되는지 설명해주세요.
 
+1. 브라우저에 URL 주소 입력
+2. 도메인 네임을 DNS(Domain Name Server)에서 검색
+3. DNS에서 매칭된 IP주소로 사용자의 요청 URL정보를 전달
+4. 정보를 조합하여 HTTP 프로토콜 request를 생성
+5. TCP 프로토콜을 이용하여 인터넷을 통해 해당 서버의 컴퓨터에게 전달
+6. 서버는 요청에 따라 데이터를 처리하고 HTTP를 통해 응답 메세지를 생성하고 다시 TCP 프로토콜을 사용하여 인터넷을 거쳐 브라우저로 전송
+7. 브라우저에 의해 화면을 출력
