4번 문제 풀이

--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,1 +1,5 @@
-
+## 본인이 주력으로 사용하는 언어에서 설계적 결함 한 가지를 작성해주세요.
+### 배열의 크기가 int로 고정되어 있다.
+  - 자바에서는 배열의 크기는 최대 정수가 가질 수 있는 크기만큼으로 제한합니다.
+  - 자바에서 정수는 기본적으로 int 타입을 갖기 때문에 기본적으로 배열의 최대 크기 또한 int==4byte==32bit==2^32의 크기 이상을 가질 수 없습니다.
+  - 2^32 이상의 크기를 갖기 위해선 JVM의 변경이 필요합니다.
