--- a/5번 문제.md
+++ b/5번 문제.md
@@ -1,1 +1,14 @@
 
+## 본인이 주력으로 사용하는 언어에서 자료구조와 관련 된 클래스가 내부적으로 어떻게 동작하는지 한 가지 사례를 정하여 작성해주세요.
+
+### ArrayList
+- ArrayList는 List Interface를 구현하여 List가 가진 메서드를 사용합니다.
+- 배열의 특징을 지니고 있기 때문에 Random Access가 가능합니다.
+  - ArrayList class 내부를 보면 RandomAccess Interface를 구현하고 있는 것을 볼 수 있습니다. 또한 elementData라는 Object 배열이 정의되어 있습니다. 
+  - 내부에 배열을 사용하기 때문에 Random Access를 구현할 수 있습니다.
+- ArrayList는 자동으로 크기를 확장합니다.
+  - 내부에 default capacity는 10으로 정의되어 있습니다.
+  - add() 메서드로 요소를 추가할 때 내부에선 배열의 크기를 확인하여 만약 배열이 꽉 찼다면 내부에서 grow() 메서드를 호출합니다.
+  - grow()는 newCapacity()를 사용해서 계산된 배열의 크기를 구하고 배열을 복사합니다.
+  - 이전의 복사된 배열은 삭제됩니다. 
+    - heap 메모리에 생성된 사용되지 않는 객체는 GC에 의해 제거
